--- a/Apptivate_UQMS_WebApp.csproj
+++ b/Apptivate_UQMS_WebApp.csproj
@@ -29,4 +29,8 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Middleware\" />
+  </ItemGroup>
+
 </Project>
