Created page for staff to view feedback

--- a/Apptivate_UQMS_WebApp.csproj
+++ b/Apptivate_UQMS_WebApp.csproj
@@ -51,4 +51,8 @@
     <PackageReference Include="UploadThing.Core" Version="0.1.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Views\Query\StudentQuery\ResolvedQuery\" />
+  </ItemGroup>
+
 </Project>
