--- a/Apptivate_UQMS_WebApp.csproj
+++ b/Apptivate_UQMS_WebApp.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -55,6 +55,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Env\" />
     <Folder Include="Views\Query\StudentQuery\ResolvedQuery\" />
   </ItemGroup>
 
