--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -15,7 +15,7 @@
       "launchBrowser": true,
       "applicationUrl": "http://localhost:5042",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Production",
+        "ASPNETCORE_ENVIRONMENT": "Development",
         "FIREBASE_CONFIG": "C:\\Users\\trent\\source\\repos\\Apptivate_UQMS\\Env\\uqms-firebase-adminsdk.json"
       }
     },
@@ -25,7 +25,7 @@
       "launchBrowser": true,
       "applicationUrl": "https://localhost:7046",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Production",
+        "ASPNETCORE_ENVIRONMENT": "Development",
         "FIREBASE_CONFIG": "C:\\Users\\trent\\source\\repos\\Apptivate_UQMS\\Env\\uqms-firebase-adminsdk.json"
       }
     },
@@ -33,7 +33,7 @@
       "commandName": "IISExpress",
       "launchBrowser": true,
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Production",
+        "ASPNETCORE_ENVIRONMENT": "Development",
         "FIREBASE_CONFIG": "C:\\Users\\trent\\source\\repos\\Apptivate_UQMS\\Env\\uqms-firebase-adminsdk.json"
       }
     }
