added project reference

--- a/appsettings.json
+++ b/appsettings.json
@@ -12,7 +12,7 @@
 
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=LAPTOP-VM0M57UP\\SQLEXPRESS;Database=UQMS_db;TrustServerCertificate=true;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=tcp:apptivateserver.database.windows.net,1433;Initial Catalog=UQMS_db;Persist Security Info=False;User ID=TrentClarke;Password=jnLgDtjGgg6MShh;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "AllowedHosts": "*",
 
