--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,10 +19,10 @@ jobs:
         dotnet-version: '8.0.100'
     
     - name: Restore dependencies
-      run: dotnet restore Apptivate_UQMS.sln
+      run: dotnet restore Apptivate_UQMS_WebApp.sln
     
     - name: Build
-      run: dotnet build Apptivate_UQMS.sln --no-restore
+      run: dotnet build Apptivate_UQMS_WebApp.sln --no-restore
     
     - name: Test
-      run: dotnet test Apptivate_UQMS.sln --no-build --verbosity normal
+      run: dotnet test Apptivate_UQMS_WebApp.sln --no-build --verbosity normal
